# Pic2Acrylic

./: .gitignore  README.md  build-acrylic.bat  build_acrylic.py  gui_view.py  prep_masks.py  pyproject.toml  web-ui.bat  web_ui.py
tests/: make_fixture.py
